--- a/style.css
+++ b/style.css
@@ -1,1 +1,36 @@
-dhsleebryan.github.io
+<!DOCTYPE html>
+<html>
+<body>
+<h1> All About Me</h1>
+<title> This is my portfolio website </title>
+
+<p>
+My name is Lee Bryan from class 1A I am a student of Dunman High School. Currently in 1st year Dunman high school. I scored 256+3 for PSLE and I am doing very well in school now. I am in St Johns Brigade. Overall I am enoying my life here in Dunman High school
+</p>
+<p> I have many special abilities such as being able to help people in need without hesitation.
+ </p>
+<br>
+<p>Here are the things I love to do the most : </p> 
+<ul>
+<li>playing thomas and friends toys
+ <img src="https://vignette.wikia.nocookie.net/starwars/images/2/2c/Vebb_Grievous_Fisto.jpg/revision/latest/scale-to-width-down/322?cb=20120924013414"/>
+<li>watching star wars</li>
+<li>doing math and science work</li>
+ h1{
+
+  font-family: verdana;
+  color:blue;
+}
+
+ h2{
+  font-family: verdana;
+  color:blue;
+}
+
+p{
+ font-family: verdana;
+}
+
+body {
+    background-color: #33ccff;
+}
